crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(TextRange::up_to(source.text_len()), source,)"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..24,
                codes: [
                    RuleIdent {
                        identifier: Code(
                            "F401",
                        ),
                        range: 14..18,
                    },
                    RuleIdent {
                        identifier: Code(
                            "F841",
                        ),
                        range: 20..24,
                    },
                ],
            },
        ),
    ),
)
